--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.30.0
-scikit-learn==1.3.2
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.8.1
-joblib==1.3.2
+streamlit
+scikit-learn
+pandas
+numpy
+matplotlib
+joblib
